# nanobot-router

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
k8s/: deployment.yaml  pvc.yaml
router/: auth.py  config.py  main.py  process_manager.py
