[project]
name = "nanobot-router"
version = "0.1.0"
description = "Multi-user routing gateway for nanobot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "PyJWT[crypto]>=2.8",   # JWT validation (crypto = RSA/EC support)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",
]

[project.scripts]
nanobot-router = "router.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
